Edited to suit mobile devices

--- a/style.css
+++ b/style.css
@@ -6,38 +6,36 @@ body{
     background-color: slategray;
 }
 #writeup{
-    font-size: 22px;
+    font-size: large;
     /* padding-left: 200px; */
     font-family: 'Times New Roman', Times, serif;
 }
  #box{
-        margin-left: 0px;
         box-sizing: content-box;
-        width: 305px;
+        width: 50%;
         height: fit-content;
         background-color: rgb(250, 210, 213);
         box-shadow: rgb(26, 140, 179) 2px 2px 2px 2px;
-        padding: 50px;
-        margin-top: 30px;
+        padding: 3%;
+        margin-top: 2%;
     }
     #hbox{
-        margin-left: 0px;
         box-sizing: content-box;
-        width: 305px;
+        width: 50%;
         height: fit-content;
         background-color: rgb(250, 210, 213);
         box-shadow: rgb(26, 140, 179) 2px 2px 2px 2px;
-        padding: 30px;
-        margin-left: 50px;
-        margin-top: 30px;
+        padding: 2%;
+        margin-left: 2%;
+        margin-top: 2%;
     }
     #button, #show{
         background-color: skyblue;
-        padding: 10px;
+        padding: 1%;
     }
 #display, #displays{
-    width: 200px;
-    height: 30px;
+    width: 65%;
+    height: 0.001%;
 }
 #height{
    width: 200px;
@@ -52,59 +50,14 @@ body{
     display: flex;
     /* margin-left: 200px; */
 }
-@media (max-width:700px){
-    #header{
-        padding-left: 500px;
-        color: rgb(10, 2, 2);
-    }
-    body{
-        background-color: slategray;
-    }
-    #writeup{
-        font-size: 22px;
-        padding-left: 200px;
-        font-family: 'Times New Roman', Times, serif;
-    }
-     #box{
-            margin-left: 0px;
-            box-sizing: content-box;
-            width: 305px;
-            height: fit-content;
-            background-color: rgb(250, 210, 213);
-            box-shadow: rgb(26, 140, 179) 2px 2px 2px 2px;
-            padding: 50px;
-            margin-top: 30px;
-        }
-        #hbox{
-            margin-left: 0px;
-            box-sizing: content-box;
-            width: 305px;
-            height: fit-content;
-            background-color: rgb(250, 210, 213);
-            box-shadow: rgb(26, 140, 179) 2px 2px 2px 2px;
-            padding: 30px;
-            margin-left: 50px;
-            margin-top: 30px;
-        }
-        #button, #show{
-            background-color: skyblue;
-            padding: 10px;
-        }
-    #display, #displays{
-        width: 200px;
-        height: 30px;
-    }
-    #height{
-       width: 200px;
-       height: 20px;
-    }
-    #to-m{
-        font-size: 20px;
-        font-family: 'Times New Roman', Times, serif;
-        font-weight: 900;
-    }
+@media (max-width:1100px){
     #entire{
-        display: flex;
-        margin-left: 200px;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    }
+    .wrapper{
+        margin: auto 0;
+        
     }
 }
