--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body{
     display: flex;
     /* margin-left: 200px; */
 }
-@media (max-width:1100px){
+@media (max-width:400px){
     #entire{
     display: flex;
     flex-direction: column;
@@ -58,6 +58,8 @@ body{
     }
     .wrapper{
         margin: auto 0;
-        
+    }
+    body{
+        background-color: white;
     }
 }
